--- a/src/main/resources/assets/the-pickle-jar/lang/en_us.json
+++ b/src/main/resources/assets/the-pickle-jar/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.the-pickle-jar.rad_pick": "Radioactive Picklolium",
 
   "item.the-pickle-jar.inkblot_mallet": "InkBlot Mallet",
+  "item.the-pickle-jar.raggidy_scythe": "Raggidy Scythe",
 
   "block.the-pickle-jar.picklolium_deposit": "Picklolium Deposit",
 
