--- a/src/main/resources/assets/the-pickle-jar/lang/en_us.json
+++ b/src/main/resources/assets/the-pickle-jar/lang/en_us.json
@@ -19,6 +19,8 @@
   "tooltip.the-pickle-jar.broken_telephone.tooltip": "Something powerful is inside, unusable...for now",
   "tooltip.the-pickle-jar.toon_steel.tooltip": "Listen closely, there's raggidy music inside",
   "tooltip.the-pickle-jar.rad_pick.tooltip": "Best not to hold it for too long",
+  "tooltip.the-pickle-jar.inkblot_mallet": "A song of justice plays within",
+  "tooltip.the-pickle-jar.raggidy_scythe": "A weight of guilt pressures you",
 
   "itemgroup.picklejar": "Pickle Jar"
 }
